# SPDX-License-Identifier: Apache-2.0

[package]
name = "libubpf-sys"
version = "0.9.610+9fef7d5"
description = "Rust bindings to libubpf from IO Visor"
readme = "README.md"
repository = "https://github.com/alexforster/libubpf-sys"
homepage = "https://github.com/alexforster/libubpf-sys"
documentation = "https://docs.rs/libubpf-sys"
keywords = ["bpf", "ebpf", "ubpf"]
authors = [
    "Alex Forster <alex@alexforster.com>",
]
license = "Apache-2.0"
edition = "2018"
build = "build.rs"
links = "ubpf"
exclude = [
    "/ubpf/external", # only needed for tests
]

[badges]
github = { repository = "alexforster/libubpf-sys" }
maintenance = { status = "passively-maintained" }

[build-dependencies]
bindgen = { version = "^0.71" } # BSD-3-Clause
cmake = { version = "^0.1" } # MIT OR Apache-2.0

[lib]
crate-type = ["lib", "staticlib"]
