# SPDX-License-Identifier: Apache-2.0

[package]
name = "libubpf-sys"
version = "1.0.681+890575a"
description = "Rust bindings to libubpf from IO Visor"
readme = "README.md"
repository = "https://github.com/alexforster/libubpf-sys"
homepage = "https://github.com/alexforster/libubpf-sys"
documentation = "https://docs.rs/libubpf-sys"
keywords = ["bpf", "ebpf", "ubpf"]
authors = [
    "Alex Forster <alex@alexforster.com>",
]
license = "Apache-2.0"
edition = "2018"
build = "build.rs"
links = "ubpf"
exclude = [
    "/ubpf/external", # only needed for tests
]

[badges]
github = { repository = "alexforster/libubpf-sys" }
maintenance = { status = "passively-maintained" }

[features]
default = []
# When enabled, the build script ignores the vendored `ubpf/` source and instead
# builds the ubpf source tree pointed to by the `LIBUBPF_SYS_SOURCE_DIR`
# environment variable.
custom-source = []

[build-dependencies]
bindgen = { version = "0.72.1" } # BSD-3-Clause
cmake = { version = "^0.1" } # MIT OR Apache-2.0

[lib]
crate-type = ["lib", "staticlib"]
